Remove -webkit-overflow-scrolling from .v-scrollable for now - caused a weird iOS 5 bug in Accordion touch support (#8723 #8792)
svn changeset:23770/svn branch:6.8

--- a/WebContent/VAADIN/themes/base/common/common.css
+++ b/WebContent/VAADIN/themes/base/common/common.css
@@ -232,5 +232,4 @@ div.v-app-loading {
 
 .v-scrollable {
 	overflow: auto;
-	-webkit-overflow-scrolling: touch;
 }
